# sequential-test

./: Cargo.toml  README.md
.github/workflows/: rust.yml
criterion/report/: index.html
criterion/sequential-test/base/: raw.csv  sample.json
criterion/sequential-test/new/: benchmark.json  estimates.json  tukey.json
criterion/sequential-test/report/: index.html
criterion/serial_test/base/: estimates.json  raw.csv  sample.json  tukey.json
criterion/serial_test/new/: benchmark.json
criterion/serial_test/report/: index.html
example/: Cargo.toml
example/src/: lib.rs
sequential-macro/: Cargo.toml  README.md
sequential-macro/src/: lib.rs
sequential-test/: Cargo.toml
sequential-test/benches/: benchmark.rs
sequential-test/src/: lib.rs
