[package]
name = "sequential-macro"
version = "0.1.4"
edition = "2021"
description = "Allows for the creation of sequential Rust tests."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro = true

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false