[package]
name = "sequential-macro"
version = "0.2.4"
edition = "2021"
description = "Allows for the creation of sequential Rust tests."
license = "Apache-2.0"

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.43"

[lib]
proc-macro = true

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false