[package]
name = "sequential-test"
version = "0.1.3"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2021"
description = "Allows for the creation of sequential Rust tests."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/sequential-test/"
readme = "README.md"
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sequential-macro = { path = "../sequential-macro", version = "0.1.1" }