[package]
name = "sequential-test"
version = "0.2.4"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
edition = "2021"
description = "Allows for the creation of sequential Rust tests."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/sequential-test/"
readme = "README.md"
categories = ["development-tools::testing"]

[dependencies]
sequential-macro = { path = "../sequential-macro", version = "0.1.4" }

[dev-dependencies]
rand = "0.8.5"